@@ -1,0 +1,10 @@
+<html>
+	<head>
+		<title>How to add new tests</title>
+	</head>
+	<body>
+		<p>The tests are automatically run from the tests directory in vdsk. 
+Any file with a .dtm extension in there will be considered a test and executed
+on the next run.</p>
+	</body>
+</html>
